@@ -1,6 +1,14 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.87 2004/10/04 13:10:32 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.88 2004/10/05 13:22:06 zhen Exp $
+
+  05 Oct 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
+  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
+  targets/livecd-stage1/livecd-stage1-chroot.sh,
+  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
+  targets/stage3/stage3-chroot.sh, targets/tinderbox/tinderbox-chroot.sh:
+  bugfix for #66083 which in turn addresses #61605. distcc apparently does not
+  have to start a server on the build host for it to distribute.
 
   04 Oct 2004; John Davis <zhen@gentoo.org> catalyst:
   added a new -s/ --snapshot option. no more using --cli to create snapshots,
